--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/vapor-cli": "^1.52",
-        "laravel/vapor-core": "^2.27"
+        "laravel/vapor-core": "^2.27",
+        "twbs/bootstrap": "5.3.0-alpha1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
