--- a/vapor.yml
+++ b/vapor.yml
@@ -5,6 +5,7 @@ environments:
         memory: 1024
         cli-memory: 512
         runtime: 'php-8.1:al2'
+        database: aanbod
         build:
             - 'composer install --no-dev'
             - 'php artisan event:cache'
